--- a/test/index.html
+++ b/test/index.html
@@ -18,7 +18,7 @@
      };
   </script>
   
-  <script src="coffee-script.js"></script>
+  <script src="lib/coffee-script.js"></script>
   <script type="text/coffeescript">
   	tests = [
   	  'utils/utils_test.coffee',
